--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,11 +58,11 @@
             <!-- Display total quantity and price -->
             <tr>
               <td colspan="2" class="align-middle text-left"><strong>Quantity</strong></td>
-              <td colspan="2" class="align-middle text-right">1</td>
+              <td colspan="2" class="align-middle text-right">{{ getTotalQuantity() }}</td>
             </tr>
             <tr>
               <td colspan="2" class="align-middle text-left"><strong>Price</strong></td>
-              <td colspan="2" class="align-middle text-right">$2200</td>
+              <td colspan="2" class="align-middle text-right">${{ getTotalPrice() }}</td>
             </tr>
           </tbody>
         </table>
